--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,31 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.navbar {
+  width: 100%;
+  height: 50px;
+  padding: 5px;
+  border-bottom: lightgrey;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
+.logo {
   width: 40px;
+  height: 40px;
+  object-fit: cover;
+  margin: 5px;
 }
+
+.logo-round-shadow {
+  border-radius: 50%;
+  box-shadow: 0px 0px 6px 3px light-gray;
+}
+
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: white;
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
