--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,5 +5,7 @@
     <% end %>
   </div>
   <div class="navbar-links">
+    <%= link_to "My lists", lists_path, class: "navbar-link" %>
+    <%= link_to "New list", lists_path, class: "navbar-link" %>
   </div>
 </div>
