--- a/app/assets/stylesheets/components/_list_card.scss
+++ b/app/assets/stylesheets/components/_list_card.scss
@@ -1,25 +1,45 @@
 .list-card-index {
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 150px;
   border: black;
+  position: relative;
 }
 
 .list-index-content {
-  padding: 100px;
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  padding: 10px 0;
 
   img {
     width: 100%;
-    height: 80%;
+    height: 100%;
     object-fit: cover;
   }
 }
 
-.list-card-content {
+// .list-card-content {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 100%;
+//   height: 20%;
+// }
+
+.list-card-name {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  color: white;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 20%;
+  text-align: center;
+
 }
