--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,10 @@
 .navbar {
   width: 100%;
   height: 50px;
-  padding: 5px;
-  border-bottom: lightgrey;
+  padding: 0;
+  background-color: white;
+  border: 1px solid black;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -17,15 +19,13 @@
   box-shadow: 0px 0px 6px 3px light-gray;
 }
 
-// .navbar-lewagon {
-//   justify-content: space-between;
-//   background: white;
-// }
+.navbar-link {
+  text-decoration: none;
+  color: black;
+  margin-right: 10px;
 
-// .navbar-lewagon .navbar-collapse {
-//   flex-grow: 0;
-// }
-
-// .navbar-lewagon .navbar-brand img {
-//   width: 40px;
-// }
+  &:hover {
+    color: black;
+    text-decoration: underline;
+  }
+}
