--- a/app/assets/stylesheets/pages/_lists_index.scss
+++ b/app/assets/stylesheets/pages/_lists_index.scss
@@ -9,6 +9,27 @@
 
   h1 {
     color: white;
-    text-shadow: black;
   }
+}
+
+.lists-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  h3 {
+    font-weight: bold;
+  }
+
+  a {
+    background-color: $success;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+  }
+}
+
+.lists-wrapper {
+  padding: 100px 0;
 }
