--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for @list do |f| %>
-<%= f.input :name %>
-<%# <%= f.input :photo, as: :file %>
-<%= f.submit class: 'btn btn-primary' %>
-<% end %>
+<div class="container p-5">
+  <%= simple_form_for @list do |f| %>
+  <%= f.input :name %>
+  <%# <%= f.input :photo, as: :file %>
+  <%= f.submit class: 'btn btn-primary' %>
+  <% end %>
+</div>
