--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
 <div class="navbar">
   <div class="logo-navbar">
-    <%= link_to lists_path do %>
-      <%= image_tag "popcorn.jpg", alt: "app logo", class: 'logo logo-round-shadow' %>
+    <%= link_to root_path do %>
+      <%= cl_image_tag "wvtgc49xj7jwpbrk33p9", alt: "app logo", class: 'logo logo-round-shadow' %>
     <% end %>
   </div>
   <div class="navbar-links">
-    <%= link_to "My lists", lists_path, class: "navbar-link" %>
-    <%= link_to "New list", lists_path, class: "navbar-link" %>
+    <%= link_to "My lists", root_path, class: "navbar-link" %>
+    <%= link_to "New list", new_list_path, class: "navbar-link" %>
   </div>
 </div>
